--- a/example.in
+++ b/example.in
@@ -41,7 +41,7 @@ thermo_style    custom step cpu pe lx ly lz c_myTemp # c_eatoms
 #dump_modify    1 element W
 #run             0
 
-dump            d1 all custom 50 annealing.dump id element x y z
+dump            d1 all custom 50 system.dump id element x y z
 dump_modify     d1 element Al H O
 
 timestep        0.0005
@@ -54,7 +54,7 @@ velocity        all create 50.0 11123
 min_style      cg
 minimize        1e-10 1e-12 10000 100000
 
-# ----------- Simulated annealing ---------
+# ----------- Simulation ---------
 
 #fix    2 all nvt temp 25.0 25.0 0.05
 fix            1 all nve
